--- a/android/docker-compose.yml
+++ b/android/docker-compose.yml
@@ -1,12 +1,11 @@
 version: "3"
 services:
   android_builder:
-    image: android:v1
+    build: .
     command: /bin/bash
     tty: true
     stdin_open: true
     volumes:
-      - /home/${USER}/AndroidSourceCode/lineage/:/source # SourceCode Directory
-      - /etc/passwd:/etc/passwd:ro
-      - /etc/group:/etc/group:ro
-      - /etc/shadow:/etc/shadow:ro
+      - /home/${USER}/android/lineage/:/source # SourceCode Directory
+      - /home/${USER}/.ccache:/ccache # ccache directory
+
